grammar/generated/UEASParser.java
// Generated from grammar/UEAS.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class UEASParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		ALGORITHM=18, FUNCTION=19, PROCEDURE=20, RETURN=21, IF=22, ELSE=23, FOR=24, 
		WHILE=25, IN=26, LET=27, ASSERT=28, INVARIANT=29, COMPLEXITY=30, TRUE=31, 
		FALSE=32, AND=33, OR=34, NOT=35, MOD=36, IDENTIFIER=37, INTEGER_LIT=38, 
		REAL_LIT=39, STRING_LIT=40, PLUS=41, MINUS=42, STAR=43, SLASH=44, ASSIGN=45, 
		BIND=46, EQ=47, NEQ=48, LT=49, LE=50, GT=51, GE=52, ARROW=53, COLON=54, 
		SEMICOLON=55, COMMA=56, DOT=57, LBRACE=58, RBRACE=59, LPAREN=60, RPAREN=61, 
		LBRACKET=62, RBRACKET=63, PIPE=64, AT=65, AS=66, LINE_COMMENT=67, BLOCK_COMMENT=68, 
		WS=69;
	public static final int
		RULE_program = 0, RULE_algorithmDecl = 1, RULE_parameter = 2, RULE_complexityAnnotation = 3, 
		RULE_variableBinding = 4, RULE_identifier = 5, RULE_statement = 6, RULE_block = 7, 
		RULE_variableDecl = 8, RULE_assignment = 9, RULE_returnStmt = 10, RULE_ifStmt = 11, 
		RULE_forLoop = 12, RULE_whileLoop = 13, RULE_assertStmt = 14, RULE_invariantStmt = 15, 
		RULE_expression = 16, RULE_logicalOr = 17, RULE_logicalAnd = 18, RULE_equality = 19, 
		RULE_comparison = 20, RULE_additive = 21, RULE_multiplicative = 22, RULE_unary = 23, 
		RULE_primary = 24, RULE_compositeCall = 25, RULE_compositeLiteral = 26, 
		RULE_setLiteral = 27, RULE_listLiteral = 28, RULE_mapLiteral = 29, RULE_graphLiteral = 30, 
		RULE_edgeLiteral = 31, RULE_matrixLiteral = 32, RULE_typeAnnotation = 33, 
		RULE_primitiveType = 34, RULE_compositeType = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "algorithmDecl", "parameter", "complexityAnnotation", "variableBinding", 
			"identifier", "statement", "block", "variableDecl", "assignment", "returnStmt", 
			"ifStmt", "forLoop", "whileLoop", "assertStmt", "invariantStmt", "expression", 
			"logicalOr", "logicalAnd", "equality", "comparison", "additive", "multiplicative", 
			"unary", "primary", "compositeCall", "compositeLiteral", "setLiteral", 
			"listLiteral", "mapLiteral", "graphLiteral", "edgeLiteral", "matrixLiteral", 
			"typeAnnotation", "primitiveType", "compositeType"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'graph'", "'matrix'", "'some'", "'none'", "'Integer'", "'Real'", 
			"'Boolean'", "'String'", "'Void'", "'Set'", "'List'", "'Map'", "'Graph'", 
			"'Matrix'", "'Option'", "'Result'", "'Tuple'", "'algorithm'", "'function'", 
			"'procedure'", "'return'", "'if'", "'else'", "'for'", "'while'", "'in'", 
			"'let'", "'assert'", "'invariant'", null, "'true'", "'false'", "'and'", 
			"'or'", "'not'", "'mod'", null, null, null, null, "'+'", "'-'", "'*'", 
			"'/'", "':='", "'='", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'->'", 
			"':'", "';'", "','", "'.'", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"'|'", "'@'", "'as'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "ALGORITHM", "FUNCTION", "PROCEDURE", 
			"RETURN", "IF", "ELSE", "FOR", "WHILE", "IN", "LET", "ASSERT", "INVARIANT", 
			"COMPLEXITY", "TRUE", "FALSE", "AND", "OR", "NOT", "MOD", "IDENTIFIER", 
			"INTEGER_LIT", "REAL_LIT", "STRING_LIT", "PLUS", "MINUS", "STAR", "SLASH", 
			"ASSIGN", "BIND", "EQ", "NEQ", "LT", "LE", "GT", "GE", "ARROW", "COLON", 
			"SEMICOLON", "COMMA", "DOT", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
			"LBRACKET", "RBRACKET", "PIPE", "AT", "AS", "LINE_COMMENT", "BLOCK_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UEAS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UEASParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(UEASParser.EOF, 0); }
		public List<AlgorithmDeclContext> algorithmDecl() {
			return getRuleContexts(AlgorithmDeclContext.class);
		}
		public AlgorithmDeclContext algorithmDecl(int i) {
			return getRuleContext(AlgorithmDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(72);
				algorithmDecl();
				}
				}
				setState(75); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ALGORITHM );
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AlgorithmDeclContext extends ParserRuleContext {
		public TerminalNode ALGORITHM() { return getToken(UEASParser.ALGORITHM, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(UEASParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(UEASParser.RPAREN, 0); }
		public ComplexityAnnotationContext complexityAnnotation() {
			return getRuleContext(ComplexityAnnotationContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(UEASParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(UEASParser.RBRACE, 0); }
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public TerminalNode ARROW() { return getToken(UEASParser.ARROW, 0); }
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(UEASParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UEASParser.COMMA, i);
		}
		public AlgorithmDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_algorithmDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitAlgorithmDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AlgorithmDeclContext algorithmDecl() throws RecognitionException {
		AlgorithmDeclContext _localctx = new AlgorithmDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_algorithmDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(ALGORITHM);
			setState(80);
			identifier();
			setState(81);
			match(LPAREN);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 143881404446L) != 0)) {
				{
				setState(82);
				parameter();
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(83);
					match(COMMA);
					setState(84);
					parameter();
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(92);
			match(RPAREN);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(93);
				match(ARROW);
				setState(94);
				typeAnnotation();
				}
			}

			setState(97);
			complexityAnnotation();
			setState(98);
			match(LBRACE);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230521029263390L) != 0)) {
				{
				{
				setState(99);
				statement();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(UEASParser.COLON, 0); }
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			identifier();
			setState(108);
			match(COLON);
			setState(109);
			typeAnnotation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComplexityAnnotationContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(UEASParser.AT, 0); }
		public TerminalNode COMPLEXITY() { return getToken(UEASParser.COMPLEXITY, 0); }
		public TerminalNode LPAREN() { return getToken(UEASParser.LPAREN, 0); }
		public TerminalNode STRING_LIT() { return getToken(UEASParser.STRING_LIT, 0); }
		public TerminalNode RPAREN() { return getToken(UEASParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(UEASParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(UEASParser.COMMA, i);
		}
		public List<VariableBindingContext> variableBinding() {
			return getRuleContexts(VariableBindingContext.class);
		}
		public VariableBindingContext variableBinding(int i) {
			return getRuleContext(VariableBindingContext.class,i);
		}
		public ComplexityAnnotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexityAnnotation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitComplexityAnnotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComplexityAnnotationContext complexityAnnotation() throws RecognitionException {
		ComplexityAnnotationContext _localctx = new ComplexityAnnotationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_complexityAnnotation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(AT);
			setState(112);
			match(COMPLEXITY);
			setState(113);
			match(LPAREN);
			setState(114);
			match(STRING_LIT);
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(115);
				match(COMMA);
				setState(116);
				variableBinding();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(122);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableBindingContext extends ParserRuleContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode BIND() { return getToken(UEASParser.BIND, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableBindingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableBinding; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitVariableBinding(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableBindingContext variableBinding() throws RecognitionException {
		VariableBindingContext _localctx = new VariableBindingContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variableBinding);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			identifier();
			setState(125);
			match(BIND);
			setState(126);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdentifierContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(UEASParser.IDENTIFIER, 0); }
		public TerminalNode TRUE() { return getToken(UEASParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(UEASParser.FALSE, 0); }
		public IdentifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifier; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierContext identifier() throws RecognitionException {
		IdentifierContext _localctx = new IdentifierContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_identifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 143881404446L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public VariableDeclContext variableDecl() {
			return getRuleContext(VariableDeclContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public ForLoopContext forLoop() {
			return getRuleContext(ForLoopContext.class,0);
		}
		public WhileLoopContext whileLoop() {
			return getRuleContext(WhileLoopContext.class,0);
		}
		public AssertStmtContext assertStmt() {
			return getRuleContext(AssertStmtContext.class,0);
		}
		public InvariantStmtContext invariantStmt() {
			return getRuleContext(InvariantStmtContext.class,0);
		}
		public CompositeCallContext compositeCall() {
			return getRuleContext(CompositeCallContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(UEASParser.SEMICOLON, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(142);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(130);
				variableDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(131);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				returnStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(133);
				ifStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				forLoop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(135);
				whileLoop();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(136);
				assertStmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(137);
				invariantStmt();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(138);
				compositeCall();
				setState(139);
				match(SEMICOLON);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(141);
				block();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(UEASParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(UEASParser.RBRACE, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(LBRACE);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230521029263390L) != 0)) {
				{
				{
				setState(145);
				statement();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclContext extends ParserRuleContext {
		public TerminalNode LET() { return getToken(UEASParser.LET, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode COLON() { return getToken(UEASParser.COLON, 0); }
		public TypeAnnotationContext typeAnnotation() {
			return getRuleContext(TypeAnnotationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(UEASParser.SEMICOLON, 0); }
		public TerminalNode ASSIGN() { return getToken(UEASParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public VariableDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitVariableDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclContext variableDecl() throws RecognitionException {
		VariableDeclContext _localctx = new VariableDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_variableDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(LET);
			setState(154);
			identifier();
			setState(155);
			match(COLON);
			setState(156);
			typeAnnotation();
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ASSIGN) {
				{
				setState(157);
				match(ASSIGN);
				setState(158);
				expression();
				}
			}

			setState(161);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AssignmentContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public TerminalNode ASSIGN() { return getToken(UEASParser.ASSIGN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode SEMICOLON() { return getToken(UEASParser.SEMICOLON, 0); }
		public List<TerminalNode> DOT() { return getTokens(UEASParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(UEASParser.DOT, i);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(UEASParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(UEASParser.LBRACKET, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(UEASParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(UEASParser.RBRACKET, i);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UEASVisitor ) return ((UEASVisitor<? extends T>)visitor).visitAssignment(this);
			else return visitor.visitChildren(this);
		}
	}
